app/assets/stylesheets/custom.css
/* ... */
.close_preview {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close_preview:hover,
.close_preview:focus{
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

.msg_edit {
    visibility: hidden!important;
    cursor: pointer;
}

.feed-element:hover .msg_edit {
    visibility: visible;
}

